--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body{
     background-color: black;
     position: relative;
+    overflow-x: hidden;
 }
 
 
@@ -88,7 +89,7 @@ nav{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 150px;
+    padding: 20px 250px;
 }
 
 .logo{
@@ -148,7 +149,7 @@ main {
     align-items: center;
     justify-content: space-between;
     margin-top: 100px;
-    padding: 0px 170px;
+    padding: 0px 250px;
 }
 
 .hero-text {
@@ -176,10 +177,11 @@ main {
     font-weight: bold;
 }
 
-.hero-text h2,
+.hero-text
 p {
     color: #fff;
     font-weight: lighter;
+    font-size: 18px;
 }
 
 .hero-image img {
@@ -206,7 +208,7 @@ p {
 
 @media (max-width:768px) {
     main {
-        margin-top: 50px;
+        margin-top: 30px;
         flex-direction: column;
         padding: 30px;
         width: 100%;
@@ -223,17 +225,68 @@ p {
     }
 
     .hero-text h1,
-    h2,
     p {
         text-align: center;
     }
 
     .hero-text h1 {
-        font-size: 33px;
+        font-size: 35px;
     }
 
     .hero-image img {
-        height: 300px;
+        height: 350px;
         width: auto;
     }
+}
+
+.js-scroll {
+    opacity: 0;
+    transition: opacity 2s ease-in;
+}
+
+.js-scroll.scrolled {
+    opacity: 1;
+}
+
+.section-one{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 250px;
+    margin-top: 100px;
+}
+
+.section-one-images{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.section-one-images img{
+    height: 150px;
+    width: auto;
+}
+
+.section-one-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    color: #fff;
+    text-align: center;
+}
+
+.section-one-text h2{
+    font-size: 36px;
+}
+
+@media (max-width:768px){
+    .section-one {
+    flex-direction: column-reverse;
+    gap: 30px;
+    padding: 30px;
+    margin-top: 50px;
+ }
 }
