--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ p {
     justify-content: center;
     padding: 30px 250px;
     margin-top: 150px;
-    background-color: #17255A;
+    background-color: #050505;
 }
 
 .section-four-images{
